--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="./styles.css" rel="stylesheet" />
+  </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="./component.js"></script>
+    <script type="module" src="./flight-detail.js"></script>
   </body>
 </html>
